Import ccid-1.4.12 from upstream

--- a/Makefile.in
+++ b/Makefile.in
@@ -240,7 +240,6 @@ LIBTOOL = @LIBTOOL@
 
 # Automatically update the libtool script if it becomes out-of-date.
 LIBTOOL_DEPS = @LIBTOOL_DEPS@
-LIBUSBCONFIG = @LIBUSBCONFIG@
 LIBUSB_CFLAGS = @LIBUSB_CFLAGS@
 LIBUSB_LIBS = @LIBUSB_LIBS@
 LIPO = @LIPO@
@@ -330,6 +329,7 @@ prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
 sbindir = @sbindir@
+serialconfdir = @serialconfdir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
 sysconfdir = @sysconfdir@
