--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-# $Id: Makefile.am 6664 2013-06-18 09:07:58Z rousseau $
+# $Id: Makefile.am 6752 2013-09-16 18:27:04Z rousseau $
 
 CCID_BUNDLE = $(bundle)
 CCID_LIB = libccid.$(DYN_LIB_EXT)
@@ -8,14 +8,17 @@ CCID_VERSION=CCID_VERSION=`$(srcdir)/convert_version.pl $(PACKAGE_VERSION)`
 
 lib_LTLIBRARIES =
 LIBS_TO_INSTALL =
+LIBS_TO_UNINSTALL =
 if WITH_LIBUSB
 lib_LTLIBRARIES += libccid.la
 LIBS_TO_INSTALL += install_ccid
+LIBS_TO_UNINSTALL += uninstall_ccid
 noinst_PROGRAMS = parse
 endif
 if WITH_TWIN_SERIAL
 lib_LTLIBRARIES += libccidtwin.la
 LIBS_TO_INSTALL += install_ccidtwin
+LIBS_TO_UNINSTALL += uninstall_ccidtwin
 endif
 
 COMMON = ccid.c \
@@ -73,6 +76,8 @@ EXTRA_DIST = Info.plist.src create_Info_plist.pl reader.conf.in \
 	towitoko/COPYING towitoko/README openct/LICENSE \
 	convert_version.pl 92_pcscd_ccid.rules
 
+# We can't use install-exec-local since we want to overwrite the install
+# rule. We do not want to _add_ files to install
 install: $(LIBS_TO_INSTALL)
 
 INSTALL_UDEV_RULE_FILE=@/bin/echo -e "\n\33[01;31m***************\n" ; echo "copy the src/92_pcscd_ccid.rules file in udev directory (/etc/udev/rules.d/)" ; /bin/echo -e "\n***************\n\33[0m"
@@ -96,11 +101,12 @@ install_ccidtwin: libccidtwin.la
 
 # do not uninstall the serial driver by default
 # use explicitely 'make uninstall_ccidtwin'
-uninstall: uninstall_ccid
+uninstall: $(LIBS_TO_UNINSTALL)
 
 uninstall_ccid:
 	rm -rf $(DESTDIR)$(usbdropdir)/$(CCID_BUNDLE)
 
 uninstall_ccidtwin:
-	rm -f $(DESTDIR)$(ccidtwindir)/$(CCIDTWIN_LIB).$(VERSION)
+	rm -f $(DESTDIR)$(ccidtwindir)/$(CCIDTWIN_LIB)
+	rm -f $(DESTDIR)/$(serialconfdir)/libccidtwin
 
